--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@main
 
     - name: Set up Go 1.24
-      uses: actions/cache@v3
+      uses: actions/setup-go@v5
       with:
         go-version: '1.24.x'
 
